tests/typechecker/should_fail/duplicated_definition_datatype_clause.csp
datatype A = B.{0..1} | B.{0..1}
